src/test_compilateur/tst/ok/if.c
int main()
{
  int a;
  a=2;
  int b;
  b=4;
  if(b<a)
    b=2*b;
  else
    a=2*a;
}
