src/test_compilateur/tst/error/if__wrong.c
int main()
{
  int a=2;
  int b=4;
  if b<a
    b=2*b;
  else
    a=2*a;
}
